add content: form and buttons to login page

--- a/login.html
+++ b/login.html
@@ -12,5 +12,50 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Register</h1>
+      <div>
+        <form>
+          <div>
+            <div class="form-group">
+              <label><strong>Username</strong></label>
+              <input
+                type="text"
+                placeholder="Enter your username..."
+                class="form-control"
+                value
+              />
+            </div>
+          </div>
+          <div>
+            <div class="form-group">
+              <label><strong>Password</strong></label>
+              <input
+                type="password"
+                placeholder="Enter your password..."
+                class="form-control"
+                value
+              />
+            </div>
+          </div>
+          <div>
+            <div class="form-group">
+              <label><strong> Password</strong></label>
+              <input
+                type="password"
+                placeholder="Verify your password"
+                class="form-control"
+              />
+            </div>
+          </div>
+          <!-- <div> -->
+          <button class="btn btn-primary btn-block">Login</button>
+          <a class="btn btn-success btn-block" href="register.html">Register</a>
+          <!-- </div>
+          <div><button>Register</button></div> -->
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
