add content to login and registration pages

--- a/login.html
+++ b/login.html
@@ -44,16 +44,15 @@
               <label><strong> Password</strong></label>
               <input
                 type="password"
-                placeholder="Verify your password"
+                placeholder="Verify your password..."
                 class="form-control"
               />
             </div>
           </div>
-          <!-- <div> -->
-          <button class="btn btn-primary btn-block">Login</button>
+          <button class="btn btn-primary btn-block">
+            Login
+          </button>
           <a class="btn btn-success btn-block" href="register.html">Register</a>
-          <!-- </div>
-          <div><button>Register</button></div> -->
         </form>
       </div>
     </div>
