--- a/register.html
+++ b/register.html
@@ -12,5 +12,45 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Register</h1>
+    <div>
+    <form>
+      <div>
+        <div class="form-group">
+          <label><strong>Username</strong></label>
+          <input
+            type="text"
+            placeholder="Enter your username here"
+            class="form-control"
+          />
+        </div>
+      </div>
+      <div>
+        <div class="form-group">
+          <label><strong>Password</strong></label>
+          <input
+            type="password"
+            placeholder="Enter your password here"
+            class="form-control"
+          />
+        </div>
+      </div>
+      <div>
+        <div class="form-group">
+          <label><strong>Verify Password</strong></label>
+          <input
+            type="password"
+            placeholder="Verify your password here"
+            class="form-control"
+          />
+        </div>
+      </div>
+
+      <a class="btn btn-primary btn-block" href="profile.html">Register</a>
+      <a class="btn btn-danger btn-block" href="login.html">Cancel</a>
+    </form>
+    </div>
+  </body>
 </html>
