--- a/User/register.html
+++ b/User/register.html
@@ -22,7 +22,7 @@
           <label><strong>Username</strong></label>
           <input
             type="text"
-            placeholder="Enter your username here"
+            placeholder="Enter your username here..."
             class="form-control"
           />
         </div>
@@ -32,7 +32,7 @@
           <label><strong>Password</strong></label>
           <input
             type="password"
-            placeholder="Enter your password here"
+            placeholder="Enter your password here..."
             class="form-control"
           />
         </div>
@@ -42,7 +42,7 @@
           <label><strong>Verify Password</strong></label>
           <input
             type="password"
-            placeholder="Verify your password here"
+            placeholder="Verify your password here..."
             class="form-control"
           />
         </div>
