--- a/User/login.html
+++ b/User/login.html
@@ -39,7 +39,7 @@
               />
             </div>
           </div>
-          <div>
+          <!-- <div>
             <div class="form-group">
               <label><strong> Password</strong></label>
               <input
@@ -48,10 +48,12 @@
                 class="form-control"
               />
             </div>
-          </div>
-          <button class="btn btn-primary btn-block">
+          </div> -->
+          <!-- <button class="btn btn-primary btn-block">
             Login
-          </button>
+          </button> -->
+          <!-- Use the a class to make the link look like a button - refer to bootstrap button documentation -->
+          <a class="btn btn-primary btn-block" href="profile.html">Login</a>
           <a class="btn btn-success btn-block" href="register.html">Register</a>
         </form>
       </div>
