updates profile page with nav bar, style sheet and font awesome

--- a/User/profile.html
+++ b/User/profile.html
@@ -11,6 +11,19 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style.css" />
+    <script
+      src="https://kit.fontawesome.com/070407bb9c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- create nav bar - navigation bar is a block element - see bootstrap documentation -->
+    <nav class="navbar">
+      <!-- span is an inline element -->
+      <span>Profile</span>
+      <!-- check mark icon from font awesome website -->
+      <i class="fas fa-check"></i>
+    </nav>
+  </body>
 </html>
