--- a/User/profile.html
+++ b/User/profile.html
@@ -28,16 +28,16 @@
     <div class="container">
       <form>
         <div class="form-group">
-          <label for="username"><strong>Username</strong></label>
+          <label for="userName">Username</label>
           <input
             type="text"
             placeholder="Enter username here..."
             class="form-control"
-            id="username"
+            id="userName"
           />
         </div>
         <div class="form-group">
-          <label for="email"><strong>Email</strong></label>
+          <label for="email">Email</label>
           <input
             type="email"
             placeholder="Enter email here..."
@@ -46,7 +46,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="firstName"><strong>First Name</strong></label>
+          <label for="firstName">First Name</label>
           <input
             type="text"
             placeholder="Enter first name here..."
@@ -55,7 +55,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="lastName"><strong>Last Name</strong></label>
+          <label for="lastName">Last Name</label>
           <input
             type="text"
             placeholder="Enter last name here..."
@@ -64,6 +64,16 @@
           />
         </div>
       </form>
+      <a href="../website/WebsiteList.html" class="btn btn-primary btn-block"
+        >Websites</a
+      >
+      <a class="btn btn-danger btn-block" href="login.html">Logout</a>
     </div>
+    <nav class="navbar bg-primary fixed-bottom">
+      <span></span>
+      <a class="text-light" href="profile.html"
+        ><i class="fas fa-user-alt"></i
+      ></a>
+    </nav>
   </body>
 </html>
