adds id to forms

--- a/User/profile.html
+++ b/User/profile.html
@@ -23,7 +23,9 @@
       <!-- span is an inline element -->
       <span class="navbar-brand h1 mb-0">Profile</span>
       <!-- check mark icon from font awesome website -->
-      <i class="fas fa-check text-light"></i>
+      <a class="text-light" href="profile.html"
+        ><i class="fas fa-check text-light"></i
+      ></a>
     </nav>
     <div class="container">
       <form>
