--- a/User/register.html
+++ b/User/register.html
@@ -20,31 +20,34 @@
     <form>
       <div>
         <div class="form-group">
-          <label><strong>Username</strong></label>
+          <label for="userName">Username</label>
           <input
             type="text"
             placeholder="Enter your username here..."
             class="form-control"
+            id="userName"
           />
         </div>
       </div>
       <div>
         <div class="form-group">
-          <label><strong>Password</strong></label>
+          <label for="password">Password</label>
           <input
             type="password"
             placeholder="Enter your password here..."
             class="form-control"
+            id="password"
           />
         </div>
       </div>
       <div>
         <div class="form-group">
-          <label><strong>Verify Password</strong></label>
+          <label for="password">Verify Password</label>
           <input
             type="password"
             placeholder="Verify your password here..."
             class="form-control"
+            id="password"
           />
         </div>
       </div>
