--- a/User/login.html
+++ b/User/login.html
@@ -20,23 +20,23 @@
         <form>
           <div>
             <div class="form-group">
-              <label><strong>Username</strong></label>
+              <label for="userName">Username</label>
               <input
                 type="text"
                 placeholder="Enter your username..."
                 class="form-control"
-                value
+                id="userName"
               />
             </div>
           </div>
           <div>
             <div class="form-group">
-              <label><strong>Password</strong></label>
+              <label for="password">Password</label>
               <input
                 type="password"
                 placeholder="Enter your password..."
                 class="form-control"
-                value
+                id="password"
               />
             </div>
           </div>
