--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -11,6 +11,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style.css" />
+    <script
+      src="https://kit.fontawesome.com/070407bb9c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body></body>
 </html>
