--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -11,6 +11,17 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style.css" />
+    <script
+      src="https://kit.fontawesome.com/070407bb9c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-dark bg-primary fixed-top">
+      <a class="text-light" href="../user/Profile.html">
+        <span class="navbar-brand mb-0 h1">Websites</span></a
+      >
+    </nav>
+  </body>
 </html>
