adds nav to body

--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -19,9 +19,11 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top">
-      <a class="text-light" href="../user/Profile.html">
-        <span class="navbar-brand mb-0 h1">Websites</span></a
-      >
+      <a class="text-light" href="../user/Profile.html">Left</a>
+      <i class="fas fa-chevron-left"></i>
+      <span class="navbar-brand mb-0 h1">Websites</span>
+      <a class="text-light" href="WebsiteNew.html"></a>
+      <i class="fas fa-plus"></i>
     </nav>
   </body>
 </html>
