updates nav and span class

--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -19,11 +19,15 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top">
-      <a class="text-light" href="../user/Profile.html">Left</a>
-      <i class="fas fa-chevron-left"></i>
-      <span class="navbar-brand mb-0 h1">Websites</span>
-      <a class="text-light" href="WebsiteNew.html"></a>
-      <i class="fas fa-plus"></i>
+      <div>
+        <a class="text-light" href="../user/Profile.html">
+          <i class="fas fa-chevron-left"></i
+        ></a>
+        <span class="navbar-brand mb-0 h1">Websites</span>
+      </div>
+      <a class="text-light" href="WebsiteNew.html">
+        <i class="fas fa-plus"></i>
+      </a>
     </nav>
   </body>
 </html>
