--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -29,6 +29,14 @@
         <i class="fas fa-plus"></i>
       </a>
     </nav>
-    <div class="container"></div>
+    <div class="container">
+      <ul>
+        <li>
+          <a href="../page/PageList.html">Address Book App</a>
+          <a class="float-right" href="WebsiteEdit.html"></a>
+          <i class="fas fa-cog"></i>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
