adds lists to container

--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -36,6 +36,21 @@
           <a class="float-right" href="WebsiteEdit.html"></a>
           <i class="fas fa-cog"></i>
         </li>
+        <li>
+          <a href="../page/PageList.html">Blogger</a>
+          <a class="float-right" href="WebsiteEdit.html"></a>
+          <i class="fas fa-cog"></i>
+        </li>
+        <li>
+          <a href="../page/PageList.html">Blogging App</a>
+          <a class="float-right" href="WebsiteEdit.html"></a>
+          <i class="fas fa-cog"></i>
+        </li>
+        <li>
+          <a href="../page/PageList.html">Script Testing App</a>
+          <a class="float-right" href="WebsiteEdit.html"></a>
+          <i class="fas fa-cog"></i>
+        </li>
       </ul>
     </div>
   </body>
