creates list-group class and list-group-item class

--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -30,23 +30,23 @@
       </a>
     </nav>
     <div class="container">
-      <ul>
-        <li>
+      <ul class="list-group">
+        <li class="list-group-item">
           <a href="../page/PageList.html">Address Book App</a>
           <a class="float-right" href="WebsiteEdit.html"></a>
           <i class="fas fa-cog"></i>
         </li>
-        <li>
+        <li class="list-group-item">
           <a href="../page/PageList.html">Blogger</a>
           <a class="float-right" href="WebsiteEdit.html"></a>
           <i class="fas fa-cog"></i>
         </li>
-        <li>
+        <li class="list-group-item">
           <a href="../page/PageList.html">Blogging App</a>
           <a class="float-right" href="WebsiteEdit.html"></a>
           <i class="fas fa-cog"></i>
         </li>
-        <li>
+        <li class="list-group-item">
           <a href="../page/PageList.html">Script Testing App</a>
           <a class="float-right" href="WebsiteEdit.html"></a>
           <i class="fas fa-cog"></i>
