creates nav class

--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -30,7 +30,7 @@
       </a>
     </nav>
     <div class="container">
-      <ul class="list-group">
+      <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <a href="../page/PageList.html">Address Book App</a>
           <a class="float-right" href="WebsiteEdit.html"></a>
@@ -53,5 +53,11 @@
         </li>
       </ul>
     </div>
+    <nav class="navbar navbar-dark bg-primary fixed-bottom">
+      <span></span>
+      <a class="text-light" href="../user/Profile.html">
+        <i class="fas fa-user"></i>
+      </a>
+    </nav>
   </body>
 </html>
