creates div class for bootstrao grid system

--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -18,6 +18,9 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-primary fixed-top row"></nav>
+    <nav class="navbar navbar-dark bg-primary fixed-top row">
+      <div class="col-4"></div>
+      <div class="col-8"></div>
+    </nav>
   </body>
 </html>
