updates to right and left nav bar

--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -19,8 +19,30 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top row">
-      <div class="col-4"></div>
-      <div class="col-8"></div>
+      <!-- Left Navbar -->
+      <div class="col-3">
+        <div>
+          <a class="text-light" href="WebsiteNew.html">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+          <span class="navbar-brand mb-0 h1">Websites</span>
+        </div>
+        <a class="text-light" href="WebsiteNew.html">
+          <i class="fas fa-plus"></i>
+        </a>
+      </div>
+      <!-- Right Navbar -->
+      <div class="col-9 navbar">
+        <div>
+          <a class="text-light" href="WebsiteNew.html">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+          <span class="navbar-brand mb-0 h1">Websites</span>
+        </div>
+        <a class="text-light" href="WebsiteNew.html">
+          <i class="fas fa-plus"></i>
+        </a>
+      </div>
     </nav>
   </body>
 </html>
