adds check icon to navbar

--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -22,10 +22,10 @@
       <!-- Left Navbar -->
       <div class="col-3">
         <div>
-          <a class="text-light" href="WebsiteNew.html">
+          <a class="text-light" href="WebsiteList.html">
             <i class="fas fa-chevron-left"></i>
           </a>
-          <span class="navbar-brand mb-0 h1">Websites</span>
+          <span class="navbar-brand mb-0 h1 ml-4"> Websites</span>
         </div>
         <a class="text-light" href="WebsiteNew.html">
           <i class="fas fa-plus"></i>
@@ -34,13 +34,13 @@
       <!-- Right Navbar -->
       <div class="col-9 navbar">
         <div>
-          <a class="text-light" href="WebsiteNew.html">
+          <a class="text-light" href="WebsiteList.html">
             <i class="fas fa-chevron-left"></i>
           </a>
-          <span class="navbar-brand mb-0 h1">Websites</span>
+          <span class="navbar-brand mb-0 h1 ml-4">New Website</span>
         </div>
-        <a class="text-light" href="WebsiteNew.html">
-          <i class="fas fa-plus"></i>
+        <a class="text-light" href="WebsiteList.html">
+          <i class="fas fa-check text-light"></i>
         </a>
       </div>
     </nav>
