--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -23,7 +23,7 @@
         <a class="text-light" href="../user/Profile.html">
           <i class="fas fa-chevron-left"></i
         ></a>
-        <span class="navbar-brand mb-0 h1">Websites</span>
+        <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
       </div>
       <a class="text-light" href="WebsiteNew.html">
         <i class="fas fa-plus"></i>
@@ -33,23 +33,27 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           <a href="../page/PageList.html">Address Book App</a>
-          <a class="float-right" href="WebsiteEdit.html"></a>
-          <i class="fas fa-cog"></i>
+          <a class="float-right" href="WebsiteEdit.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </li>
         <li class="list-group-item">
           <a href="../page/PageList.html">Blogger</a>
-          <a class="float-right" href="WebsiteEdit.html"></a>
-          <i class="fas fa-cog"></i>
+          <a class="float-right" href="WebsiteEdit.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </li>
         <li class="list-group-item">
           <a href="../page/PageList.html">Blogging App</a>
-          <a class="float-right" href="WebsiteEdit.html"></a>
-          <i class="fas fa-cog"></i>
+          <a class="float-right" href="WebsiteEdit.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </li>
         <li class="list-group-item">
           <a href="../page/PageList.html">Script Testing App</a>
-          <a class="float-right" href="WebsiteEdit.html"></a>
-          <i class="fas fa-cog"></i>
+          <a class="float-right" href="WebsiteEdit.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </li>
       </ul>
     </div>
