updates to right and left nav bar

--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -20,8 +20,9 @@
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top row">
       <!-- Left Navbar -->
-      <div class="col-3">
-        <div>
+      <div class="col-lg-3 d-none d-lg-block">
+        <div class="navbar">
+          <div>
           <a class="text-light" href="WebsiteList.html">
             <i class="fas fa-chevron-left"></i>
           </a>
@@ -31,8 +32,9 @@
           <i class="fas fa-plus"></i>
         </a>
       </div>
+    </div>
       <!-- Right Navbar -->
-      <div class="col-9 navbar">
+      <div class="col-lg-9 navbar">
         <div>
           <a class="text-light" href="WebsiteList.html">
             <i class="fas fa-chevron-left"></i>
@@ -44,5 +46,6 @@
         </a>
       </div>
     </nav>
+  </div>
   </body>
 </html>
