--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -46,6 +46,41 @@
         </a>
       </div>
     </nav>
+    <div class="row">
+      <div class="col-3">
+          <div class="container">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <a href="../page/PageList.html">Address Book App</a>
+                  <a class="float-right" href="WebsiteEdit.html">
+                    <i class="fas fa-cog"></i>
+                  </a>
+                </li>
+                <li class="list-group-item">
+                  <a href="../page/PageList.html">Blogger</a>
+                  <a class="float-right" href="WebsiteEdit.html">
+                    <i class="fas fa-cog"></i>
+                  </a>
+                </li>
+                <li class="list-group-item">
+                  <a href="../page/PageList.html">Blogging App</a>
+                  <a class="float-right" href="WebsiteEdit.html">
+                    <i class="fas fa-cog"></i>
+                  </a>
+                </li>
+                <li class="list-group-item">
+                  <a href="../page/PageList.html">Script Testing App</a>
+                  <a class="float-right" href="WebsiteEdit.html">
+                    <i class="fas fa-cog"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+      </div>
+      <div class="col-9">
+
+      </div>
+    </div>
   </div>
   </body>
 </html>
