--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -78,7 +78,17 @@
             </div>
       </div>
       <div class="col-9">
-
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text"
+      placeholder="Enter website name..."
+      id="name"
+      class="form-control"/>
+    </div>
+  </form>
+</div>
       </div>
     </div>
   </div>
