--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -47,7 +47,7 @@
       </div>
     </nav>
     <div class="row">
-      <div class="col-3">
+      <div class="col-lg-3 ">
           <div class="container">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -77,7 +77,7 @@
               </ul>
             </div>
       </div>
-      <div class="col-9">
+      <div class="col-lg-9">
 <div class="container">
   <form>
     <div class="form-group">
@@ -87,8 +87,20 @@
       id="name"
       class="form-control"/>
     </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea rows="5"
+      class="form-control"
+      placeholder="Enter website description..."
+      ></textarea>
+    </div>
   </form>
 </div>
+<nav class="navbar navbar-dark bg-primary fixed bottom">
+  <span></span>
+  <a class="text-light" href="../user/Profile.html">
+  <i class="fas fa-user"></i></a>
+</nav>
       </div>
     </div>
   </div>
