--- a/Website/WebsiteNew.html
+++ b/Website/WebsiteNew.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>New Website</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -16,6 +15,7 @@
       src="https://kit.fontawesome.com/070407bb9c.js"
       crossorigin="anonymous"
     ></script>
+    <title>New Website</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top row">
@@ -23,86 +23,89 @@
       <div class="col-lg-3 d-none d-lg-block">
         <div class="navbar">
           <div>
-          <a class="text-light" href="WebsiteList.html">
-            <i class="fas fa-chevron-left"></i>
+            <a class="text-light" href="WebsiteList.html">
+              <i class="fas fa-chevron-left"></i>
+            </a>
+            <span class="navbar-brand mb-0 h1 ml-4"> Websites</span>
+          </div>
+          <a class="text-light" href="WebsiteNew.html">
+            <i class="fas fa-plus"></i>
           </a>
-          <span class="navbar-brand mb-0 h1 ml-4"> Websites</span>
         </div>
-        <a class="text-light" href="WebsiteNew.html">
-          <i class="fas fa-plus"></i>
-        </a>
       </div>
-    </div>
       <!-- Right Navbar -->
       <div class="col-lg-9 navbar">
         <div>
-          <a class="text-light" href="WebsiteList.html">
+          <a class="text-light d-lg-none" href="WebsiteList.html">
             <i class="fas fa-chevron-left"></i>
           </a>
           <span class="navbar-brand mb-0 h1 ml-4">New Website</span>
         </div>
         <a class="text-light" href="WebsiteList.html">
-          <i class="fas fa-check text-light"></i>
+          <i class="fas fa-check"></i>
         </a>
       </div>
     </nav>
     <div class="row">
-      <div class="col-lg-3 ">
-          <div class="container">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <a href="../page/PageList.html">Address Book App</a>
-                  <a class="float-right" href="WebsiteEdit.html">
-                    <i class="fas fa-cog"></i>
-                  </a>
-                </li>
-                <li class="list-group-item">
-                  <a href="../page/PageList.html">Blogger</a>
-                  <a class="float-right" href="WebsiteEdit.html">
-                    <i class="fas fa-cog"></i>
-                  </a>
-                </li>
-                <li class="list-group-item">
-                  <a href="../page/PageList.html">Blogging App</a>
-                  <a class="float-right" href="WebsiteEdit.html">
-                    <i class="fas fa-cog"></i>
-                  </a>
-                </li>
-                <li class="list-group-item">
-                  <a href="../page/PageList.html">Script Testing App</a>
-                  <a class="float-right" href="WebsiteEdit.html">
-                    <i class="fas fa-cog"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+      <div class="col-lg-3 d-none d-lg-block">
+        <div class="container">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Address Book App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Blogger</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Blogging App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Script Testing App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="col-lg-9">
-<div class="container">
-  <form>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text"
-      placeholder="Enter website name..."
-      id="name"
-      class="form-control"/>
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <textarea rows="5"
-      class="form-control"
-      placeholder="Enter website description..."
-      ></textarea>
-    </div>
-  </form>
-</div>
-<nav class="navbar navbar-dark bg-primary fixed bottom">
-  <span></span>
-  <a class="text-light" href="../user/Profile.html">
-  <i class="fas fa-user"></i></a>
-</nav>
+        <div class="container">
+          <form>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                placeholder="Enter website name..."
+                id="name"
+                class="form-control"
+              />
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <textarea
+                rows="5"
+                class="form-control"
+                placeholder="Enter website description..."
+              ></textarea>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
+    <nav class="navbar navbar-dark bg-primary fixed-bottom">
+      <span></span>
+      <a class="text-light" href="../user/Profile.html">
+        <i class="fas fa-user"></i
+      ></a>
+    </nav>
   </body>
 </html>
