--- a/Website/WebsiteList.html
+++ b/Website/WebsiteList.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Website List Page</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -16,6 +15,7 @@
       src="https://kit.fontawesome.com/070407bb9c.js"
       crossorigin="anonymous"
     ></script>
+    <title>Websites</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary fixed-top">
