creates left navbar

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -17,5 +17,18 @@
     ></script>
     <title>Edit Website</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-dark bg-primary fixed-top row">
+      <!-- Left Navbar -->
+      <div class="col-lg-3 d-none d-lg-block">
+        <div class="navbar">
+          <div>
+            <a class="text-light" href="WebsiteList.html">
+              <i class="fas fa-chevron-left"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
