ipdates to left nav bar

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -26,6 +26,10 @@
             <a class="text-light" href="WebsiteList.html">
               <i class="fas fa-chevron-left"></i>
             </a>
+            <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
+            <a class="text-light" href="WebsiteNew.html">
+              <i class="fas fa-plus"></i>
+            </a>
           </div>
         </div>
       </div>
