updates to right nav bar

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -33,6 +33,13 @@
           </div>
         </div>
         <!-- Right Navbar -->
+        <div class="col-lg-9 navbar">
+          <div>
+            <a class="text-light d-lg none " href="WebsiteList.html">
+              <i class="fas fa-chevron-left"></i
+            ></a>
+          </div>
+        </div>
       </div>
     </nav>
   </body>
