updates to right navbar

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -38,7 +38,11 @@
             <a class="text-light d-lg none " href="WebsiteList.html">
               <i class="fas fa-chevron-left"></i
             ></a>
+            <span class="navbar-brand mb-0 h1 ml-4">Edit Website</span>
           </div>
+          <a class="text-light" href="WebsiteList.html">
+            <i class="fas fa-check"></i>
+          </a>
         </div>
       </div>
     </nav>
