creates col-3 container

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -46,5 +46,10 @@
         </div>
       </div>
     </nav>
+    <div class="row">
+      <div class="col-lg-3 d-none d-lg-block">
+        <div class="container"></div>
+      </div>
+    </div>
   </body>
 </html>
