--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -48,7 +48,16 @@
     </nav>
     <div class="row">
       <div class="col-lg-3 d-none d-lg-block">
-        <div class="container"></div>
+        <div class="container">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Address Book App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
