--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -56,6 +56,24 @@
                 <i class="fas fa-cog"></i>
               </a>
             </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Blogger</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Blogging App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../page/PageList.html">Script Testing App</a>
+              <a class="float-right" href="WebsiteEdit.html">
+                <i class="fas fa-cog"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
