--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -78,5 +78,21 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-9">
+      <div class="container">
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              placeholder="Enter website name..."
+              id="name"
+              class="form-control"
+              value="Blogger"
+            />
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
