updates to nav bar, form, and footer

--- a/Website/WebsiteEdit.html
+++ b/Website/WebsiteEdit.html
@@ -27,23 +27,23 @@
               <i class="fas fa-chevron-left"></i>
             </a>
             <span class="navbar-brand mb-0 h1 ml-4">Websites</span>
-            <a class="text-light" href="WebsiteNew.html">
-              <i class="fas fa-plus"></i>
-            </a>
           </div>
-        </div>
-        <!-- Right Navbar -->
-        <div class="col-lg-9 navbar">
-          <div>
-            <a class="text-light d-lg none " href="WebsiteList.html">
-              <i class="fas fa-chevron-left"></i
-            ></a>
-            <span class="navbar-brand mb-0 h1 ml-4">Edit Website</span>
-          </div>
-          <a class="text-light" href="WebsiteList.html">
-            <i class="fas fa-check"></i>
+          <a class="text-light" href="WebsiteNew.html">
+            <i class="fas fa-plus"></i>
           </a>
         </div>
+      </div>
+      <!-- Right Navbar -->
+      <div class="col-lg-9 navbar">
+        <div>
+          <a class="text-light d-lg none " href="WebsiteList.html">
+            <i class="fas fa-chevron-left"></i
+          ></a>
+          <span class="navbar-brand mb-0 h1 ml-4">Edit Website</span>
+        </div>
+        <a class="text-light" href="WebsiteList.html">
+          <i class="fas fa-check"></i>
+        </a>
       </div>
     </nav>
     <div class="row">
@@ -77,22 +77,42 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="col-lg-9">
-      <div class="container">
-        <form>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input
-              type="text"
-              placeholder="Enter website name..."
-              id="name"
-              class="form-control"
-              value="Blogger"
-            />
-          </div>
-        </form>
+      <div class="col-lg-9">
+        <div class="container">
+          <form>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                placeholder="Enter website name..."
+                id="name"
+                class="form-control"
+                value="Blogger"
+              />
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <textarea
+                class="form-control"
+                placeholder="Enter website description..."
+                rows="5"
+              >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nisi pariatur perferendis dolor praesentium, enim dolorum inventore illo fugit, deleniti architecto quidem sapiente qui quisquam unde. Eum perspiciatis harum atque?
+            </textarea
+              >
+            </div>
+            <a href="WebsiteList.html" class="btn btn-danger btn-block"
+              >Delete</a
+            >
+          </form>
+        </div>
       </div>
     </div>
+    <nav class="navbar navbar-dark bg-primary fixed-bottom">
+      <span></span>
+      <a class="text-light" href="../user/Profile.html">
+        <i class="fas fa-user"></i>
+      </a>
+    </nav>
   </body>
 </html>
