--- a/Widget/WidgetList.html
+++ b/Widget/WidgetList.html
@@ -11,6 +11,16 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style.css" />
+    <script
+      src="https://kit.fontawesome.com/070407bb9c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <h1>GIZMODO</h1>
+    <p>US Senate Reaches Compromise</p>
+
+    <!-- https://www.washingtonpost.com/news/powerpost/wp/2016/08/11/obama-administration-to-shift-81-million-to-fight-zika/ -->
+  </body>
 </html>
