--- a/Widget/WidgetImage.html
+++ b/Widget/WidgetImage.html
@@ -15,7 +15,7 @@
     src="https://kit.fontawesome.com/070407bb9c.js"
     crossorigin="anonymous"
   ></script>
-    <title>Edit Widget</title>
+    <title> Widget Image</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light fixed-top">
